
##############################################################################

Release 0.1
===========
- real roots isolation and refinement (poly_extra.h)
- renf structure (renf.h)
- renf_elem structures (renf_elem.h)
- C++ interface (renfxx.h)

Release 1.0
===========

New C function
--------------
- ` renf_elem_swap(renf_elem_t, renf_elem_t)`

Multithread support
-------------------
- e-antic used to be thread safe via an open MP pragma (in the number field
  refinement). It now uses a more direct mutex from the pthread library.

Breaking Changes to the C++ Interface
-------------------------------------
- `e-antic/renfxx.h` requires C++17.
- All classes are now declared in the namespace `eantic`.
- The semantics of `operator =` have changed. In e-antic 0.1 the following
  would create the unit in the field K.
  ```
  renf_elem_class x(K);
  x = 1;
  ```
  Now the above statement makes x a rational number. More generally, an
  assignment resets the number field so that after `x = y` the condition
  `x.nf == renf_elem_class(y).nf` holds. To mimic the old behavior you need
  to rewrite the above as
  ```
  renf_elem_class x(K);
  x = renf_elem_class(K, 1);
  ```
- `renf_class` is now hidden behind a factory to get shared_ptr semantics
  everywhere. Create a `renf_class` by calling `renf_class::make(…)`. This
	returns a smart pointer, so you might have to replace some `.` with `->`.
- The change of semantics in assignment also affects reading from streams (in
  order to create `renf_elem_class`). Before the following would parse an element
  into a number field:
  ```
  renf_elem_class x(K);
  in >> x;
  ```
  Now this only works if the stream contains a rational number. (Otherwise an
  exception is raised.) As `in >> x` also resets `x.nf`. The above code should
  be replaced with:
  ```
  renf_elem_class x;
  K.set_pword(in);
  in >> x;
  ```
- `renf_elem_class(string&)` has been removed. If you want to parse a rational